--- a/projects.html
+++ b/projects.html
@@ -34,10 +34,10 @@ js:
 <p>
 - Built, trained and tested various deep learning architectures (ResNet, VGG16, DenseNet, etc.) via transfer learning for the purpose of 'diagnosing' patients with either COVID-19, viral pneumonia or bacterial pneumonia based on chest x-rays. Project involved use of TensorFlow and NumPy.
   <p> 
-        
+<img width="551" align="center" alt="Screen Shot 2023-06-20 at 6 34 04 PM" src="https://github.com/sawanp813/sawanp813.github.io/images/images/Screen Shot 2023-06-20 at 6.33.49 PM.png">        
   </p>
   <p> 
-<img width="551" align="center" alt="Screen Shot 2023-06-20 at 6 34 04 PM" src="https://github.com/sawanp813/sawanp813.github.io/assets/68625173/93764d7f-f9f8-4ba6-bdd2-0685761eb36b">
+<img width="551" align="center" alt="Screen Shot 2023-06-20 at 6 34 04 PM" src="https://github.com/sawanp813/sawanp813.github.io/images/Screen Shot 2023-06-20 at 6.34.04 PM.png">
   </p>
 </p>
 ## Bivariate normal distribution parameter estimation (**2022**).
@@ -50,14 +50,14 @@ js:
 <p>
 - Hebbian neural network simulation of shift property exhibited in retinal cells which contribute to a saturating effect in response. Such a characteristic is useful, for example, when suddenly entering an area of intense light where a more linear pattern would result in diffuse, blurred vision.
   <p>
-    <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 03 18 PM" src="https://github.com/sawanp813/sawanp813.github.io/assets/68625173/d52d0449-a568-470d-9e1e-0aec8010bde6">
+    <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 03 18 PM" src="https://github.com/sawanp813/sawanp813.github.io/images/Screen Shot 2023-06-25 at 12.44.21 AM.png">
   </p>
 </p>
 ## Recurrent, shunting neural network
 <p>
 - Recurrent, shunting neural network that reflects the ability of a small collection of neurons to separate a noisy, diverse collection of inputs.
   <p>
-    <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 17 37 PM" src="https://github.com/sawanp813/sawanp813.github.io/assets/68625173/981dfbe1-df06-4267-a520-58712a31d156">
+    <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 17 37 PM" src="https://github.com/sawanp813/sawanp813.github.io/images/Screen Shot 2023-06-25 at 12.44.03 AM.png">
   </p>
 </p>
 
@@ -65,12 +65,12 @@ js:
 ## Instagram clone (EECS 485)
 <p>
   <p>
-    <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 19 10 PM" src="https://github.com/sawanp813/sawanp813.github.io/assets/68625173/42b21a7d-df1a-4573-8b0f-8982e1dc15b4">
+    <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 19 10 PM" src="https://github.com/sawanp813/sawanp813.github.io/images/Screen Shot 2023-06-25 at 12.43.46 AM.png">
   </p>
 </p>
 ## Google clone (EECS 485)
 <p>
   <p>
-    <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 20 21 PM" src="https://github.com/sawanp813/sawanp813.github.io/assets/68625173/7f7a9387-f8a3-4450-95e4-c074520e3b25">
+    <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 20 21 PM" src="https://github.com/sawanp813/sawanp813.github.io/images/Screen Shot 2023-06-19 at 7.23.54 PM.png">
   </p>
 </p>
