--- a/projects.html
+++ b/projects.html
@@ -65,7 +65,7 @@ js:
 ## Instagram clone (EECS 485)
 <p>
   <p>
-    <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 19 10 PM" src="https://github.com/sawanp813/sawanp813.github.io/images/Screen Shot 2023-06-25 at 12.43.46 AM.png">
+    <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 19 10 PM" src="https://github.com/sawanp813/sawanp813.github.io/blob/5decd3a2191b74478c83552cb6607433198f67c5/images/Screen%20Shot%202023-06-19%20at%207.23.54%20PM.png">
   </p>
 </p>
 ## Google clone (EECS 485)
