--- a/projects.html
+++ b/projects.html
@@ -34,10 +34,10 @@ js:
 <p>
 - Built, trained and tested various deep learning architectures (ResNet, VGG16, DenseNet, etc.) via transfer learning for the purpose of 'diagnosing' patients with either COVID-19, viral pneumonia or bacterial pneumonia based on chest x-rays. Project involved use of TensorFlow and NumPy.
   <p> 
-<img width="551" align="center" alt="Screen Shot 2023-06-20 at 6 34 04 PM" src="https://github.com/sawanp813/sawanp813.github.io/images/images/Screen Shot 2023-06-20 at 6.33.49 PM.png">        
+<img width="551" align="center" alt="Screen Shot 2023-06-20 at 6 34 04 PM" src="{{ site.url }}/images/Screen Shot 2023-06-20 at 6.33.49 PM.png">        
   </p>
   <p> 
-<img width="551" align="center" alt="Screen Shot 2023-06-20 at 6 34 04 PM" src="https://github.com/sawanp813/sawanp813.github.io/images/Screen Shot 2023-06-20 at 6.34.04 PM.png">
+<img width="551" align="center" alt="Screen Shot 2023-06-20 at 6 34 04 PM" src="{{ site.url }}/images/Screen Shot 2023-06-20 at 6.34.04 PM.png">
   </p>
 </p>
 ## Bivariate normal distribution parameter estimation (**2022**).
@@ -50,14 +50,14 @@ js:
 <p>
 - Hebbian neural network simulation of shift property exhibited in retinal cells which contribute to a saturating effect in response. Such a characteristic is useful, for example, when suddenly entering an area of intense light where a more linear pattern would result in diffuse, blurred vision.
   <p>
-    <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 03 18 PM" src="https://github.com/sawanp813/sawanp813.github.io/images/Screen Shot 2023-06-25 at 12.44.21 AM.png">
+    <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 03 18 PM" src="{{ site.url }}/images/Screen Shot 2023-06-25 at 12.44.21 AM.png">
   </p>
 </p>
 ## Recurrent, shunting neural network
 <p>
 - Recurrent, shunting neural network that reflects the ability of a small collection of neurons to separate a noisy, diverse collection of inputs.
   <p>
-    <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 17 37 PM" src="https://github.com/sawanp813/sawanp813.github.io/images/Screen Shot 2023-06-25 at 12.44.03 AM.png">
+    <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 17 37 PM" src="{{ site.url }}/images/Screen Shot 2023-06-25 at 12.44.03 AM.png">
   </p>
 </p>
 
@@ -65,12 +65,12 @@ js:
 ## Instagram clone (EECS 485)
 <p>
   <p>
-    <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 19 10 PM" src="https://github.com/sawanp813/sawanp813.github.io/blob/5decd3a2191b74478c83552cb6607433198f67c5/images/Screen%20Shot%202023-06-19%20at%207.23.54%20PM.png">
+    <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 19 10 PM" src="{{ site.url }}/images/Screen Shot 2023-06-25 at 12.43.46 AM.png">
   </p>
 </p>
 ## Google clone (EECS 485)
 <p>
   <p>
-    <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 20 21 PM" src="https://github.com/sawanp813/sawanp813.github.io/images/Screen Shot 2023-06-19 at 7.23.54 PM.png">
+    <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 20 21 PM" src="{{ site.url }}/images/Screen Shot 2023-06-19 at 7.23.54 PM.png">
   </p>
 </p>
