--- a/projects.html
+++ b/projects.html
@@ -29,10 +29,10 @@ js:
   });
 </script> -->
 
-# Machine Learning
-## Multi-class classification of Chest X-Ray Classification (2022)
+<h1> Machine Learning </h1>
+<h2> Multi-class classification of Chest X-Ray Classification (2022) </h2>
 <p>
-- Built, trained and tested various deep learning architectures (ResNet, VGG16, DenseNet, etc.) via transfer learning for the purpose of 'diagnosing' patients with either COVID-19, viral pneumonia or bacterial pneumonia based on chest x-rays. Project involved use of TensorFlow and NumPy.
+Built, trained and tested various deep learning architectures (ResNet, VGG16, DenseNet, etc.) via transfer learning for the purpose of 'diagnosing' patients with either COVID-19, viral pneumonia or bacterial pneumonia based on chest x-rays. Project involved use of TensorFlow and NumPy.
   <p> 
 <img width="551" align="center" alt="Screen Shot 2023-06-20 at 6 34 04 PM" src="{{ site.url }}/images/Screen Shot 2023-06-20 at 6.33.49 PM.png">        
   </p>
@@ -40,35 +40,35 @@ js:
 <img width="551" align="center" alt="Screen Shot 2023-06-20 at 6 34 04 PM" src="{{ site.url }}/images/Screen Shot 2023-06-20 at 6.34.04 PM.png">
   </p>
 </p>
-## Bivariate normal distribution parameter estimation (**2022**).
+<h2> Bivariate normal distribution parameter estimation (**2022**) </h2>
 <p>
-- Determined the parameters of a hidden dataset drawn from a bivariate normal distribution using expectation-maximization and maximum-likelihood estimation. Performance of either method was compared.
+Determined the parameters of a hidden dataset drawn from a bivariate normal distribution using expectation-maximization and maximum-likelihood estimation. Performance of either method was compared.
 </p>
 
-# Neuroscience simulations
-## Retinal shift property
+<h1> Neuroscience simulations </h1> 
+<h2> Retinal shift property </h2> 
 <p>
-- Hebbian neural network simulation of shift property exhibited in retinal cells which contribute to a saturating effect in response. Such a characteristic is useful, for example, when suddenly entering an area of intense light where a more linear pattern would result in diffuse, blurred vision.
+Hebbian neural network simulation of shift property exhibited in retinal cells which contribute to a saturating effect in response. Such a characteristic is useful, for example, when suddenly entering an area of intense light where a more linear pattern would result in diffuse, blurred vision.
   <p>
     <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 03 18 PM" src="{{ site.url }}/images/Screen Shot 2023-06-25 at 12.44.21 AM.png">
   </p>
 </p>
-## Recurrent, shunting neural network
+<h2> Recurrent, shunting neural network </h2>
 <p>
-- Recurrent, shunting neural network that reflects the ability of a small collection of neurons to separate a noisy, diverse collection of inputs.
+Recurrent, shunting neural network that reflects the ability of a small collection of neurons to separate a noisy, diverse collection of inputs.
   <p>
     <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 17 37 PM" src="{{ site.url }}/images/Screen Shot 2023-06-25 at 12.44.03 AM.png">
   </p>
 </p>
 
-# Web applications
-## Instagram clone (EECS 485)
+<h1> Web applications </h1> 
+<h2> Instagram clone (EECS 485) </h2> 
 <p>
   <p>
     <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 19 10 PM" src="{{ site.url }}/images/Screen Shot 2023-06-25 at 12.43.46 AM.png">
   </p>
 </p>
-## Google clone (EECS 485)
+<h2> Google clone (EECS 485) </h2> 
 <p>
   <p>
     <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 20 21 PM" src="{{ site.url }}/images/Screen Shot 2023-06-19 at 7.23.54 PM.png">
