--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 tags: home
 ---
-{% assign posts_count = paginator.posts | size %}
+<!-- {% assign posts_count = paginator.posts | size %}
 
 <div class="home">
   {% if posts_count > 0 %}
@@ -26,4 +26,39 @@ tags: home
   {% else %}
     <h1 class='center'>{{ site.text.index.coming_soon }}</h3>
   {% endif %}
-</div>
+</div> -->
+
+<p align="center" >
+<img width="551" alt="Screen Shot 2023-06-17 at 2 58 13 PM" src="{{ site.url }}images/Screen Shot 2023-06-17 at 2.58.13 PM.png">
+</p>
+
+
+My name is Sawan Patel and I am a second-year Master's Student at the University of Michigan studying Computer Science & Engineering. I am from Massachusetts, where I studied neuroscience and computer science. I am currently working alongside the probabilistic machine learning group at the University of Michigan working towards a method leveraging amortized variational inference to solve the problem of deep-space telescope image cataloging. I have a great interest in the latest developments in neuroscience pertaining to spatial navigation, memory and vision in general. I also 
+enjoy learning about novel probabalistic machine learning methods and their applications across a variety of domains. Career-wise, my goal is to leverage my research and professional experience with 
+machine learning methods and other analytical methods with my academic expereince with a variety of data-processing softwares to improve medicine and our understanding of the human mind and body!
+    
+<h1> Research </h1>
+<h2> Laboratory of Computational Neurophysiology (2020 - 2023) </h2> 
+<p> - Honors Research project (undergraduate thesis) aimed to synthesize the neurophysiological basis of spatial maps distributed across cortical regions into a neurophysiologically-motivated simulation of an agent navigating a familiar environment in two-dimensional space. This project utilized Bayesian estimation for head direction, for instance </p>
+<p> - Presented work at annual Kilachand Honors College [_Keystone on Tap_](https://www.bu.edu/khc/keystone-on-tap-2021/) (2021) and <a href="https://www.youtube.com/watch?v=yIhbjlYBCJ4"> Kilachand Symposium </a> (2022). </p>
+<p> Successfully defended thesis in graduate-style defense in front of neuroscience faculty committee (slides <a href="https://docs.google.com/presentation/d/1DveeQi7VLeBsrq1IGilkHcuKzQvMJB74fzwgSJB8kS0/edit?usp=sharing" > here </a>. </p>
+<p> Manuscript currently under review for publication! </p>
+<p> Supervisor: Dr. Michael Hasselmo, Boston University </p>
+
+<h2> Laboratory of Neural Development & Intellectual Disorders (2018 - 2020) </h2> 
+<p> - Assisted Ph.D candidates with research using novel neurobiology and bioengineering techniques generally in mouse models of Down Syndrome. Techniques include tissue analysis, confocal microscopy, staining, PCR, DNA extraction, plasmid purification, etc. </p>
+<p> - Supervisor: Dr. Tarik Haydar, Children's National Hospital </p>
+
+<h1> Experience </h1>
+<h2> Probabalistic Machine Learning Group | BLISS Program (2023 - ) </h2>
+<p> The Bayesian Light Source Separator (BLISS) is a method for deblending and cataloging light sources. We utilize a novel variational inference technique building on top of amortized inference, variational auto-encoders, a decoder network to generate synthesized deep-space images given some distribution over the image parameters from an existing catalog and a wake-sleep algorithm. See the GitHub repository [here](https://github.com/prob-ml/bliss). </p>
+<p> Contact: Dr. Jeffrey Regier, University of Michigan </p>
+
+<h1> Languages </h1>
+<p> - English (fluent) </p>
+<p> - Gujarati (fluent, speaking) </p>
+
+<h1> Achievements </h1>
+<p> - Awarded Harold C. Case Scholarship offered to outstanding Boston University students in recognition of scholarly, extracurricular and research achievement. </p>
+<p> - As President of the Boston University Hindu Students Council, raised over $51,000 from the '21-'22 academic year and organized several in-person events with as many as 3,000 attendees at once in the greater Boston area. </p>
+<p> - Graduated Magna Cum Laude from Boston University with honors in neuroscience.</p>
