--- a/portfolio.html
+++ b/portfolio.html
@@ -1,13 +1,13 @@
 ---
 layout: default_design
-title: Sketch & Design
+title: Travel
 tags: portfolio
-permalink: /design/
+permalink: /travel/
 js:
 - js/util_buttons.js
 ---
 
-<ul class="projects clearfix">
+<!-- <ul class="projects clearfix">
 {% for post in site.portfolio %}
   <li>
     <div class="project"
@@ -22,20 +22,7 @@ js:
           </span>
         </div>
       </a>
-      <!-- {% if post.opensource %}
-        {% if post.blackbg %}
-          <span class="github-icon light"></span>
-        {% else %}
-          <span class="github-icon"></span>
-        {% endif %}
-      {% endif %} -->
-      <!-- {% if post.progress %}
-        <span class="progress">
-          <span class="under-construction"></span>
-          <span class="progress-bar" style="width: {{ post.progress }}%"></span>
-        </span>
-      {% endif %} -->
-      <!-- <img class="thumb" src="/images/portfolio/thumbs/{{ post.uid }}.jpg" /> -->
+
       <div class="aspect-two-one"></div>
     </div>
   </li>
@@ -52,4 +39,4 @@ js:
   <script type="text/javascript">
   {% include {{ js }} %}
   </script>
-{% endfor %}
+{% endfor %} -->
