--- a/projects.html
+++ b/projects.html
@@ -40,7 +40,7 @@ Built, trained and tested various deep learning architectures (ResNet, VGG16, De
 <img width="551" align="center" alt="Screen Shot 2023-06-20 at 6 34 04 PM" src="{{ site.url }}/images/Screen Shot 2023-06-20 at 6.34.04 PM.png">
   </p>
 </p>
-<h2> Bivariate normal distribution parameter estimation (**2022**) </h2>
+<h2> Bivariate normal distribution parameter estimation (2022) </h2>
 <p>
 Determined the parameters of a hidden dataset drawn from a bivariate normal distribution using expectation-maximization and maximum-likelihood estimation. Performance of either method was compared.
 </p>
@@ -62,13 +62,13 @@ Recurrent, shunting neural network that reflects the ability of a small collecti
 </p>
 
 <h1> Web applications </h1> 
-<h2> Instagram clone (EECS 485) </h2> 
+<h2> Instagram clone, EECS 485 </h2> 
 <p>
   <p>
     <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 19 10 PM" src="{{ site.url }}/images/Screen Shot 2023-06-25 at 12.43.46 AM.png">
   </p>
 </p>
-<h2> Google clone (EECS 485) </h2> 
+<h2> Google clone, EECS 485 </h2> 
 <p>
   <p>
     <img width="551" align="center" alt="Screen Shot 2023-06-20 at 7 20 21 PM" src="{{ site.url }}/images/Screen Shot 2023-06-19 at 7.23.54 PM.png">
