--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@ tags: home
 
 
 My name is Sawan Patel and I am a second-year Master's Student at the University of Michigan studying Computer Science & Engineering. I am from Massachusetts, where I studied neuroscience and computer science. I am currently working alongside the probabilistic machine learning group at the University of Michigan working towards a method leveraging amortized variational inference to solve the problem of deep-space telescope image cataloging. I have a great interest in the latest developments in neuroscience pertaining to spatial navigation, memory and vision in general. I also 
-enjoy learning about novel probabalistic machine learning methods and their applications across a variety of domains. Career-wise, my goal is to leverage my research and professional experience with 
-machine learning methods and other analytical methods with my academic expereince with a variety of data-processing softwares to improve medicine and our understanding of the human mind and body!
+enjoy learning about novel probabalistic machine learning methods and their applications across a variety of domains. Big picture, my goal is to leverage my research and professional experience in 
+machine learning with my academic experience in a variety of data-processing softwares to improve medicine and our understanding of the human mind and body!
     
 <h1> Research </h1>
 <h2> Laboratory of Computational Neurophysiology (2020 - 2023) </h2> 
