--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@ tags: home
 <h1> Hi! </h1>
 
 <p align="center" >
-<img width="450" alt="Screen Shot 2023-06-17 at 2 58 13 PM" src="{{ site.url }}images/Screen Shot 2023-06-17 at 2.58.13 PM.png">
+<img width="300" alt="Screen Shot 2023-06-17 at 2 58 13 PM" src="{{ site.url }}images/Screen Shot 2023-06-17 at 2.58.13 PM.png">
 </p>
 
 
@@ -53,7 +53,7 @@ machine learning with my academic experience in a variety of data-processing sof
 
 <h1> Experience </h1>
 <h2> Probabalistic Machine Learning Group | BLISS Program (2023 - ) </h2>
-<p> The Bayesian Light Source Separator (BLISS) is a method for deblending and cataloging light sources. We utilize a novel variational inference technique building on top of amortized inference, variational auto-encoders, a decoder network to generate synthesized deep-space images given some distribution over the image parameters from an existing catalog and a wake-sleep algorithm. See the GitHub repository [here](https://github.com/prob-ml/bliss). </p>
+<p> The Bayesian Light Source Separator (BLISS) is a method for deblending and cataloging light sources. We utilize a novel variational inference technique building on top of amortized inference, variational auto-encoders, a decoder network to generate synthesized deep-space images given some distribution over the image parameters from an existing catalog and a wake-sleep algorithm. See the GitHub repository <a href="https://github.com/prob-ml/bliss"> here </a>. </p>
 <p> Contact: Dr. Jeffrey Regier, University of Michigan </p>
 
 <h1> Languages </h1>
