--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ machine learning with my academic experience in a variety of data-processing sof
 <h2> Laboratory of Computational Neurophysiology (2020 - 2023) </h2> 
 <p> - Honors Research project (undergraduate thesis) aimed to synthesize the neurophysiological basis of spatial maps distributed across cortical regions into a neurophysiologically-motivated simulation of an agent navigating a familiar environment in two-dimensional space. This project utilized Bayesian estimation for head direction, for instance </p>
 <p> - Presented work at annual Kilachand Honors College <a href="https://www.bu.edu/khc/keystone-on-tap-2021/"> Keystone on Tap </a> (2021) and <a href="https://www.youtube.com/watch?v=yIhbjlYBCJ4"> Kilachand Symposium </a> (2022). </p>
-<p> Successfully defended thesis in graduate-style defense in front of neuroscience faculty committee (slides <a href="https://docs.google.com/presentation/d/1DveeQi7VLeBsrq1IGilkHcuKzQvMJB74fzwgSJB8kS0/edit?usp=sharing" > here </a>. </p>
+<p> Successfully defended thesis in graduate-style defense in front of neuroscience faculty committee (slides <a href="https://docs.google.com/presentation/d/1DveeQi7VLeBsrq1IGilkHcuKzQvMJB74fzwgSJB8kS0/edit?usp=sharing" > here </a>). </p>
 <p> Manuscript currently under review for publication! </p>
 <p> Supervisor: Dr. Michael Hasselmo, Boston University </p>
 
