--- a/projects.html
+++ b/projects.html
@@ -33,6 +33,9 @@ js:
 <h1> Machine Learning </h1>
 <h2> BLISS Astronomical Image Cataloging </h2>
 <p> Helped develop BLISS variational inference software package to encode astronomical catalogs from deep space images. Specific contributions include generalizing the prior distribution over the parameter space (e.g. source density, galaxy morphology, light source fluxes, etc.) to allow for the generation of multi-bandpass images, adjusting the inherited model to encode these newly-generated multi-bandpass images, imbued the package with the ability to align multi-bandpass images relative to a fixed world-coordinate system, implemented several Gaussian Mixture Model priors for generating catalog-specific colors for our randomly-generated light sources, and more. 
+      <p>
+      <img width="600" align="center" alt="Screen Shot 2023-07-16 at 6.26.01 PM" src="{{ site.url }}/images/Screen Shot 2023-07-16 at 6.26.01 PM.png"> 
+      </p>
 </p>
 <h2> Multi-class classification of Chest X-Ray Classification (2022) </h2>
 <p>
