--- a/projects.html
+++ b/projects.html
@@ -78,6 +78,6 @@ Recurrent, shunting neural network that reflects the ability of a small collecti
 <h2> Google clone, EECS 485 </h2> 
 <p>
   <p>
-    <img width="800" align="center" alt="Screen Shot 2023-06-20 at 7 20 21 PM" src="{{ site.url }}/images/Screen Shot 2023-06-19 at 7.23.54 PM.png">
+    <img width="800" align="center" alt="Screen Shot 2023-06-20 at 7 20 21 PM" src="{{ site.url }}/images/Screen Shot 2023-11-26 at 1.01.01 AM.png">
   </p>
 </p>
