--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,22 @@ Built, trained and tested various deep learning architectures (ResNet, VGG16, De
 Determined the parameters of a hidden dataset drawn from a bivariate normal distribution using expectation-maximization and maximum-likelihood estimation. Performance of either method was compared.
 </p>
 
-<h1> Neuroscience simulations </h1> 
+<h1> Systems-level modeling of spatial navigation in rodents: a biological neural network | Undergraduate Thesis </h1>
+<p>
+      Synthesized the neurophysiological basis of spatial maps distributed across cortical regions into a neurophysiologically-motivated simulation of an agent navigating a familiar environment in two-dimensional space. Neural network model was simulated via MATLAB and consisted of a system of rate-coded, Hebbian neural populations each encoding for a latent variable relevant to spatial navigation.
+      <p>
+            <video width="800" align="center" controls>
+            <source src="{{ site.url }}/images/SpatEpisModel_Darkness_DriftOverlay.mp4" type="video/mp4">
+            </video>
+      </p>
+      <p>
+            <video width="800" align="center" controls>
+            <source src="{{ site.url }}/images/SpatEpisModel_ExtendedBD2.mp4" type="video/mp4">
+            </video>            
+      </p>
+</p>
+
+<h1> Assorted BioNN simulations </h1> 
 <h2> Retinal shift property </h2> 
 <p>
 Hebbian neural network simulation of shift property exhibited in retinal cells which contribute to a saturating effect in response. Such a characteristic is useful, for example, when suddenly entering an area of intense light where a more linear pattern would result in diffuse, blurred vision.
