--- a/projects.html
+++ b/projects.html
@@ -52,7 +52,7 @@ Built, trained and tested various deep learning architectures (ResNet, VGG16, De
 Determined the parameters of a hidden dataset drawn from a bivariate normal distribution using expectation-maximization and maximum-likelihood estimation. Performance of either method was compared.
 </p>
 
-<h1> Systems-level modeling of spatial navigation in rodents: a biological neural network | Undergraduate Thesis </h1>
+<h1> Undergraduate Thesis | Systems-level modeling of spatial navigation in rodents: a biological neural network </h1>
 <p>
       Synthesized the neurophysiological basis of spatial maps distributed across cortical regions into a neurophysiologically-motivated simulation of an agent navigating a familiar environment in two-dimensional space. Neural network model was simulated via MATLAB and consisted of a system of rate-coded, Hebbian neural populations each encoding for a latent variable relevant to spatial navigation.
       <p>
