--- a/projects.html
+++ b/projects.html
@@ -32,7 +32,7 @@ js:
 
 <h1> Machine Learning </h1>
 <h2> BLISS Astronomical Image Cataloging </h2>
-<p> Helped develop BLISS variational inference software package to encode astronomical catalogs from deep space images. Specific contributions include generalizing the prior distribution over the parameter space (e.g. source density, galaxy morphology, light source fluxes, etc.) to allow for the generation of multi-bandpass images, adjusting the inherited model to encode these newly-generated multi-bandpass images, imbued the package with the ability to align multi-bandpass images relative to a fixed world-coordinate system, implemented several Gaussian Mixture Model priors for generating catalog-specific colors for our randomly-generated light sources, and more. 
+<p> Helped develop BLISS variational inference software package to encode astronomical catalogs from deep space images. Specific contributions include generalizing the prior distribution over the parameter space (e.g. source density, galaxy morphology, light source fluxes, etc.) to allow for the generation of multi-bandpass images, adjusting the inherited model to encode these newly-generated multi-bandpass images, imbued the package with the ability to align multi-bandpass images relative to a fixed world-coordinate system, implemented several Gaussian Mixture Model priors for generating catalog-specific colors for our randomly-generated light sources, and more. Tools used: Pytorch Lightning, Poetry, Hydra, Python packages (Pytorch, Numpy, scikit-learn, Seaborn, Pandas, OpenCL, Bokeh, etc.), SQL, PyTest, Github Actions, Git, APIs, etc.
       <p>
       <img width="800" align="center" alt="Screen Shot 2023-07-16 at 6.26.01 PM" src="{{ site.url }}/images/Screen Shot 2023-07-16 at 6.26.01 PM.png"> 
       </p>
@@ -60,7 +60,7 @@ Determined the parameters of a hidden dataset drawn from a bivariate normal dist
 
 <h1> Undergraduate Thesis | Systems-level modeling of spatial navigation in rodents: a biological neural network </h1>
 <p>
-      Synthesized the neurophysiological basis of spatial maps distributed across cortical regions into a neurophysiologically-motivated simulation of an agent navigating a familiar environment in two-dimensional space. Neural network model was simulated via MATLAB and consisted of a system of rate-coded, Hebbian neural populations each encoding for a latent variable relevant to spatial navigation.
+      Synthesized the neurophysiological basis of spatial maps distributed across cortical regions into a neurophysiologically-motivated simulation of an agent navigating a familiar environment in two-dimensional space. Neural network model was simulated via MATLAB and consisted of a system of rate-coded, Hebbian neural populations each encoding for a latent variable relevant to spatial navigation. Tools used: Matlab, Git
       <p>
             <video width="800" align="center" controls>
             <source src="{{ site.url }}/images/SpatEpisModel_Darkness_DriftOverlay.mp4" type="video/mp4">
