--- a/projects.html
+++ b/projects.html
@@ -42,12 +42,7 @@ js:
       <p>
       <img width="800" align="center" alt="Screen Shot 2023-12-07 at 12.38.23 AM.png" src="{{ site.url }}/images/Screen Shot 2023-12-07 at 12.38.23 AM.png"> 
       </p>
-<p>Tools include: Pytorch geometric, Hicstraw, GEOparse, Numpy, scikit-learn, etc. See slides <a href="https://docs.google.com/presentation/d/1HrI9aspx56JQPpGVS9sUIv0NWh6wg1ElqOz7PheV0XU/edit?usp=sharing"> here </a> and report below. </p>
-        <object data= 
-"https://github.com/sawanp813/sawanp813.github.io/blob/master/BIOINF_593_Final_Project.pdf" 
-                width="800"
-                height="500"> 
-        </object> 
+<p>Tools include: Pytorch geometric, Hicstraw, GEOparse, Numpy, scikit-learn, etc. See slides <a href="https://docs.google.com/presentation/d/1HrI9aspx56JQPpGVS9sUIv0NWh6wg1ElqOz7PheV0XU/edit?usp=sharing"> here </a> and report <a href="https://www.sawanp813.github.io/BIOINF_593_Final_Project.pdf/"> here</a>.</p>
 <h2> Multi-class classification of Chest X-Ray Classification (2022) </h2>
 <p>
 Built, trained and tested various deep learning architectures (ResNet, VGG16, DenseNet, etc.) via transfer learning for the purpose of 'diagnosing' patients with either COVID-19, viral pneumonia or bacterial pneumonia based on chest x-rays. Project involved use of TensorFlow and NumPy.
