--- a/projects.html
+++ b/projects.html
@@ -60,7 +60,7 @@ Determined the parameters of a hidden dataset drawn from a bivariate normal dist
 
 <h1> Undergraduate Thesis | Systems-level modeling of spatial navigation in rodents: a biological neural network </h1>
 <p>
-      Synthesized the neurophysiological basis of spatial maps distributed across cortical regions into a neurophysiologically-motivated simulation of an agent navigating a familiar environment in two-dimensional space. Neural network model was simulated via MATLAB and consisted of a system of rate-coded, Hebbian neural populations each encoding for a latent variable relevant to spatial navigation. Tools used: Matlab, Git
+      Synthesized the neurophysiological basis of spatial maps distributed across cortical regions into a neurophysiologically-motivated simulation of an agent navigating a familiar environment in two-dimensional space. Neural network model was simulated via MATLAB and consisted of a dynamical system containing rate-coded, Hebbian neural populations, each encoding for a latent variable relevant to spatial navigation. Tools used: Matlab, Git
       <p>
             <video width="800" align="center" controls>
             <source src="{{ site.url }}/images/SpatEpisModel_Darkness_DriftOverlay.mp4" type="video/mp4">
