--- a/projects.html
+++ b/projects.html
@@ -93,7 +93,9 @@ Recurrent, shunting neural network that reflects the ability of a small collecti
 <h2> Instagram clone, EECS 485 </h2> 
 <p>
   <p>
-    <img width="800" align="center" alt="Screen Shot 2023-06-20 at 7 19 10 PM" src="{{ site.url }}/images/Screen Shot 2023-06-25 at 12.43.46 AM.png">
+      <video width="800" align="center" controls>
+      <source src="{{ site.url }}/images/ig_clone.mov" type="video/mov">
+      </video>       
   </p>
 </p>
 <h2> Google clone, EECS 485 </h2> 
