--- a/projects.html
+++ b/projects.html
@@ -94,7 +94,7 @@ Recurrent, shunting neural network that reflects the ability of a small collecti
 <p>
   <p>
       <video width="800" align="center" controls>
-      <source src="{{ site.url }}/images/ig_clone.mov" type="video/mov">
+      <source src="{{ site.url }}/images/ig_clone.mov">
       </video>       
   </p>
 </p>
