--- a/projects.html
+++ b/projects.html
@@ -94,9 +94,10 @@ Recurrent, shunting neural network that reflects the ability of a small collecti
 <p>
   <p>
       <video width="800" align="center" controls>
-      <source src="{{ site.url }}/images/ig_clone.mov">
+      <source src="{{ site.url }}/images/igclone.mov">
       </video>       
   </p>
+Developed and hosted an Instagram clone on AWS. Project consisted of a REST API querying a SQLite3 database for user-specific information which interfaced with a set of client-side dynamic pages populated with information via REACT code running in-browser. Testing performed with Cypress and PyTest. Project also tested for hosting on AWS EC2 using nginx and on a gunicorn server.
 </p>
 <h2> Google clone, EECS 485 </h2> 
 <p>
