--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@ js:
       <p>
       <img width="800" align="center" alt="Screen Shot 2023-12-07 at 12.38.23 AM.png" src="{{ site.url }}/images/Screen Shot 2023-12-07 at 12.38.23 AM.png"> 
       </p>
-<p>Tools include: Pytorch geometric, Hicstraw, GEOparse, Numpy, scikit-learn, etc. See slides <a href="https://docs.google.com/presentation/d/1HrI9aspx56JQPpGVS9sUIv0NWh6wg1ElqOz7PheV0XU/edit?usp=sharing"> here </a> and report <a href="https://www.sawanp813.github.io/BIOINF_593_Final_Project.pdf/"> here</a>.</p>
+<p><b>Tools</b> used: Pytorch geometric, Hicstraw, GEOparse, Numpy, scikit-learn, etc. See slides <a href="https://docs.google.com/presentation/d/1HrI9aspx56JQPpGVS9sUIv0NWh6wg1ElqOz7PheV0XU/edit?usp=sharing"> here </a> and report <a href="https://www.sawanp813.github.io/BIOINF_593_Final_Project.pdf/"> here</a>.</p>
 <h2> Multi-class classification of Chest X-Ray Classification (2022) </h2>
 <p>
 Built, trained and tested various deep learning architectures (ResNet, VGG16, DenseNet, etc.) via transfer learning for the purpose of 'diagnosing' patients with either COVID-19, viral pneumonia or bacterial pneumonia based on chest x-rays. Project involved use of TensorFlow and NumPy.
@@ -60,7 +60,7 @@ Determined the parameters of a hidden dataset drawn from a bivariate normal dist
 
 <h1> Undergraduate Thesis | Systems-level modeling of spatial navigation in rodents: a biological neural network </h1>
 <p>
-      Synthesized the neurophysiological basis of spatial maps distributed across cortical regions into a neurophysiologically-motivated simulation of an agent navigating a familiar environment in two-dimensional space. Neural network model was simulated via MATLAB and consisted of a dynamical system containing rate-coded, Hebbian neural populations, each encoding for a latent variable relevant to spatial navigation. Tools used: Matlab, Git
+      Synthesized the neurophysiological basis of spatial maps distributed across cortical regions into a neurophysiologically-motivated simulation of an agent navigating a familiar environment in two-dimensional space. Neural network model was simulated via MATLAB and consisted of a dynamical system containing rate-coded, Hebbian neural populations, each encoding for a latent variable relevant to spatial navigation. <b>Tools</b> used: Matlab, Git
       <p>
             <video width="800" align="center" controls>
             <source src="{{ site.url }}/images/SpatEpisModel_Darkness_DriftOverlay.mp4" type="video/mp4">
@@ -97,7 +97,7 @@ Recurrent, shunting neural network that reflects the ability of a small collecti
       <source src="{{ site.url }}/images/igclone.mov">
       </video>       
   </p>
-Developed and hosted an Instagram clone on AWS. Project consisted of a REST API querying a SQLite3 database for user-specific information which interfaced with a set of client-side dynamic pages populated with information via REACT code running in-browser. Testing performed with Cypress and PyTest. Project also tested for hosting on AWS EC2 using nginx and on a gunicorn server.
+Developed and hosted an Instagram clone on AWS. Project consisted of a REST API querying a SQLite3 database for user-specific information which interfaced with a set of client-side dynamic pages populated with information via REACT code running in-browser. Testing performed with Cypress and PyTest. Project also tested for hosting on AWS EC2 using nginx and on a gunicorn server. <b>Tools </b>used: Python, Bash, Flask, React.js, SQL, AWS
 </p>
 <h2> Google clone, EECS 485 </h2> 
 <p>
