--- a/index.html
+++ b/index.html
@@ -28,16 +28,14 @@ tags: home
   {% endif %}
 </div> -->
 
-<h1> Hi! </h1>
-
 <p align="center" >
 <img width="400" alt="Screen Shot 2023-06-17 at 2 58 13 PM" src="{{ site.url }}images/Screen Shot 2023-06-17 at 2.58.13 PM.png">
 </p>
 
 
-My name is Sawan Patel and I am a second-year Master's Student at the University of Michigan studying Computer Science & Engineering. I am from Massachusetts, where I studied neuroscience and computer science at Boston University. I am currently working alongside the probabilistic machine learning group at the University of Michigan working towards a method leveraging amortized variational inference to solve the problem of deep-space telescope image cataloging. I have a great interest in the latest developments in neuroscience pertaining to spatial navigation, memory and vision in general. I also 
+My name is Sawan Patel and I'm a recent MS graduate from the University of Michigan studying Computer Science & Engineering with a background in biology. I am from Massachusetts, where I studied neuroscience and computer science at Boston University. I am currently working alongside the Probabilistic Machine Learning group at the University of Michigan working towards a method leveraging amortized variational inference to solve the problem of deep-space telescope image cataloging. I have a great interest in the latest developments in neuroscience pertaining to spatial navigation, memory and vision in general. I also 
 enjoy learning about novel probabalistic machine learning methods and their applications across a variety of domains. Big picture, my goal is to leverage my research and professional experience in 
-machine learning with my academic experience in a variety of data-processing softwares to improve medicine and our understanding of the human mind and body!
+machine learning with my academic experience in a variety of data-processing softwares to improve ongoing work in translational medicine and our understanding of the human mind and body!
     
 <h1> Research </h1>
 <h2> Laboratory of Computational Neurophysiology (2020 - 2023) </h2> 
@@ -52,7 +50,7 @@ machine learning with my academic experience in a variety of data-processing sof
 <p> - Supervisor: Dr. Tarik Haydar, Children's National Hospital </p>
 
 <h1> Experience </h1>
-<h2> Probabalistic Machine Learning Group | LSSTC (2023 - ) </h2>
+<h2> Probabalistic Machine Learning Group | University of Michigan (2023 - ) </h2>
 <p> The Bayesian Light Source Separator (BLISS) is a method for deblending and cataloging light sources. We utilize a novel variational inference technique building on top of amortized inference, variational auto-encoders, a decoder network to generate synthesized deep-space images given some distribution over the image parameters from an existing catalog and a wake-sleep algorithm. I contributed to the development of this amortized variational inference model trained on simulated multi-band images. Specifically, I expanded the encoding and generation of single-band deep-space astronomical images to multi-band, developed several generative mixture models for robustly modeling light source colors trained on flux data across surveys, made various optimizations to the encoder architecture, and more. Intensive experiemntation was performed on the model to evaluate and benchmark performance on customized simulated images for testing generality across the entire distribution of possible variational parameters.  </p>
 <p> My projects utilized several Python packages and rigorous documentation via Jupyter Notebooks of added features. Version history was maintained by Git and benchmarking was performed with Hydra. Added functionalities are currently being documented and composed into a research manuscript. </p>
 <p> Contact: Dr. Jeffrey Regier, University of Michigan </p>
