--- a/projects.html
+++ b/projects.html
@@ -42,7 +42,7 @@ js:
       <p>
       <img width="800" align="center" alt="Screen Shot 2023-12-07 at 12.38.23 AM.png" src="{{ site.url }}/images/Screen Shot 2023-12-07 at 12.38.23 AM.png"> 
       </p>
-<p><b>Tools</b> used: Pytorch geometric, Hicstraw, GEOparse, Numpy, scikit-learn, etc. See slides <a href="https://docs.google.com/presentation/d/1HrI9aspx56JQPpGVS9sUIv0NWh6wg1ElqOz7PheV0XU/edit?usp=sharing"> here </a> and report <a href="https://www.sawanp813.github.io/BIOINF_593_Final_Project.pdf/"> here</a>.</p>
+<p><b>Tools</b> used: Pytorch geometric, Hicstraw, GEOparse, Numpy, scikit-learn, etc. See slides <a href="https://docs.google.com/presentation/d/1HrI9aspx56JQPpGVS9sUIv0NWh6wg1ElqOz7PheV0XU/edit?usp=sharing"> here </a> and report <a href="https://sawanp813.github.io/BIOINF_593_Final_Project.pdf"> here</a>.</p>
 <h2> Multi-class classification of Chest X-Ray Classification (2022) </h2>
 <p>
 Built, trained and tested various deep learning architectures (ResNet, VGG16, DenseNet, etc.) via transfer learning for the purpose of 'diagnosing' patients with either COVID-19, viral pneumonia or bacterial pneumonia based on chest x-rays. Project involved use of TensorFlow and NumPy.
@@ -105,3 +105,10 @@ Developed and hosted an Instagram clone on AWS. Project consisted of a REST API 
     <img width="800" align="center" alt="Screen Shot 2023-06-20 at 7 20 21 PM" src="{{ site.url }}/images/Screen Shot 2023-11-26 at 1.01.01 AM.png">
   </p>
 </p>
+
+<h1> Write-Ups </h1>
+<h2> Hierarchy in Biological & Computing Systems: A Review </h2>
+<p> <a href="https://sawanp813.github.io/ProjectWriteup_sawanpa"> [Here] </a>Review written for EECS 598: Action & Perception detailing the current understanding of hierarchical organization and processing in the brain and its influence on robotics and computer vision. </p>
+<h2> Software Prefetch for Accelerating GPU Programs </h2>
+<p> <a href="https://sawanp813.github.io/EECS_583_Project_Report"> [Here] </a>Implementation of an optimization pass written in LLVM for the improvement of unified memory usage in the context of GPU data prefetching. </p>
+ 
