--- a/projects.html
+++ b/projects.html
@@ -111,4 +111,6 @@ Developed and hosted an Instagram clone on AWS. Project consisted of a REST API 
 <p> <a href="https://sawanp813.github.io/ProjectWriteup_sawanpa.pdf"> [Here] </a>Review written for EECS 598: Action & Perception detailing the current understanding of hierarchical organization and processing in the brain and its influence on robotics and computer vision. </p>
 <h2> Software Prefetch for Accelerating GPU Programs </h2>
 <p> <a href="https://sawanp813.github.io/EECS_583_Project_Report.pdf"> [Here] </a>Implementation of an optimization pass written in LLVM for the improvement of unified memory usage in the context of GPU data prefetching. </p>
+<h2> Cane </h2>
+<p> <a href="https://sawanp813.github.io/PBE.pdf"> [Here] </a> A piece of creative writing. </p>
  
